Renamed file name

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!--Footer-->
     <footer class="footer">
-        <p>&copy;2025 All rights reserved</p>
+        <p>&copy;2025 All rights reserved Fish Hub</p>
     </footer>
 
 </body>
