Edited the landing page for the fish images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="fish_group">
             <ul>
                 <li>
-                    <a href="payment page.html?item=salmon">
+                    <a href="payment_page.html?item=salmon">
                         <img src="fish group/640x427-Salmon-Sockeye-NOAAFisheries.png" alt="Salmon fish image">
                         <div>
                             <h4>Salmon</h4> GHS 15.00 - GHS 35.00
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=catfish">
+                    <a href="payment_page.html?item=catfish">
                         <img src="fish group/320202354133-8csevihuup-picture-ii-tma006-business-catfish-prospects.jpg"
                             alt="catfish image">
                         <div>
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=sardine">
+                    <a href="payment_page.html?item=sardine">
                         <img src="fish group/sardine fish in Ghana.jpg" alt="sardine fish image">
                         <div>
                             <h4>Sardine</h4> GHS 20.00
@@ -70,7 +70,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="payment page.html?item=amani">
+                    <a href="payment_page.html?item=amani">
                         <img src="fish group/amani-0.jpg" alt="amani fish image">
                         <div>
                             <h4>Amani</h4> GHS 10.00
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=crab">
+                    <a href="payment_page.html?item=crab">
                         <img src="fish group/crabs.jpg" alt="crab image">
                         <div>
                             <h4>Crab</h4> GHS 10.00
@@ -86,7 +86,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=tilapia">
+                    <a href="payment_page.html?item=tilapia">
                         <img src="fish group/nile-tilapia-fish-white-background-36186050.jpg" alt="tilapia fish image">
                         <div>
                             <h4>Tilapia</h4> GHS 30.00
@@ -96,7 +96,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="payment page.html?item=redfish">
+                    <a href="payment_page.html?item=redfish">
                         <img src="fish group/Red-Snapper.jpg" alt="red fish image">
                         <div>
                             <h4>Red fish</h4> GHS 30.00
@@ -104,7 +104,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=smokedcatfish">
+                    <a href="payment_page.html?item=smokedcatfish">
                         <img src="fish group/smoke-catfish-oepned.jpg" alt="smoked cat fish image">
                         <div>
                             <h4>Smoked Cat Fish</h4> GHS 30.00
@@ -112,7 +112,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="payment page.html?item=tuna">
+                    <a href="payment_page.html?item=tuna">
                         <img src="fish group/tuna-africa.jpg" alt="tuna fish image">
                         <div>
                             <h4>Tuna</h4> GHS 40.00
